# niem-metamodel

./: .gitignore  Makefile  Makefile.in  README.md  abbreviated.md  augment.xsl  configure  configure.ac  context.json  flatten.xsl  functions.xsl  generate-xsd.xsl  issues.md  metamodel-core.dot  metamodel-references.dot  metamodel-strict.xsd  metamodel-tb.dot  metamodel-tools.dot  metamodel-with-references.dot  metamodel-workflow.dot  metamodel.dot  metamodel.json  metamodel.sch  metamodel.xml  metamodel.xsd  reference.pptx  resources.txt  restack.xsl  run  simple.xsl  slides.md  wantlist-diagram.dot  xml-catalog-generated.xml  xml-catalog-strict.xml  xml-catalog.xml
diagrams/: metamodel-light.dot
docs/: Makefile.in  NIEM-Metamodel.pptx  README.md  _config.yml  index.md  metamodel-core.dot  metamodel-tb.dot
docs-src/: Makefile.in  docs-index.md.m4  main-content.md.m4  root-readme.md.m4
example/: Makefile  README.md  claim.json  claim.xml  context.json  extension-bespoke.json  extension.abbreviated.json  extension.json  extension.xml  extension.xml.m4  target-context.json  wantlist.json  xml-catalog.xml
example/json/: context.json
example/niem/: wantlist.xml  xml-catalog.xml
metamodel/: Makefile  metamodel.xml.m4
metamodel-core/: Makefile.in  functions-model.xsl  functions-niem.xsl  functions-xml.xsl  rules-model.sch  rules-niem.sch  rules-niem.sch.xsl
metamodel-core/xsd/: metamodel.xsd  xml-catalog.xml
model-to-xsd/: functions.xsl  generate-xsd.xsl
niem/: wantlist.xml  xml-catalog.xml
simple-model/: restack  simple.xsl
xsl/: indent.xsl
(+17 files in other folders)
